[package]
name = "baidu-pan-api"
version = "0.1.0"
authors = ["PeterDing <dfhayst@gmail.com>"]

[dependencies]
lazy_static = "*"
error-chain = "*"
time = "*"
rand = "*"
reqwest = "*"
hyper = "*"
url = "*"
cookie = { version = "*", features = ["secure", "percent-encode"] }
serde = "*"
serde_derive = "*"
serde_json = "*"
rust-crypto = "*"
crc = "*"
regex = "*"
